# RodoNixos

./: flake.nix  result
flakes/cmux/: flake.nix  result
flakes/cmux/src/: Cargo.toml  README.md  flake.nix  result
flakes/cmux/src/cmux/src/: app.rs
flakes/cmux/src/data/: lcmux.desktop
flakes/cmux/src/lcmux/: Cargo.toml
flakes/cmux/src/lcmux-cli/: Cargo.toml
flakes/cmux/src/lcmux-cli/src/: main.rs
flakes/cmux/src/lcmux/src/: app.rs
flakes/cmux/src/lcmux/src/session/: store.rs
flakes/cmux/src/lcmux/src/socket/: server.rs
flakes/cmux/src/lcmux/src/ui/: window.rs
flakes/t3code/: flake.nix
hosts/laal/: default.nix
hosts/rodojaisla/: default.nix  hardware.nix
hosts/rodolucas/: default.nix  hardware.nix
modules/core/: boot.nix  locale.nix  networking.nix  nix.nix
modules/desktop/: dms.nix  stylix.nix
modules/hardware/: bluetooth.nix  droidcam.nix  logitech.nix  max98390-hda-module.nix  nvidia.nix  printing.nix  samsung-mic-fix.nix  samsung-speaker-fix.nix
modules/programs/: dev.nix  gaming.nix  openfortivpn.nix  shared.nix
users/: jaisla.nix  laal.nix  lucasp.nix  shared.nix
users/config/: niri-config.kdl
users/config/dms/: binds.kdl  colors.kdl  cursor.kdl  layout.kdl  outputs.kdl
users/programs/: dms-config.nix  fastfetch.nix  fish.nix  jetbrains.nix  kitty.nix  niri-sync.nix  nixvim.nix  obs.nix  starship.nix  vscode.nix  yazi.nix  zsh.nix
