[package]
name = "lcmux-cli"
version = "0.1.0"
edition.workspace = true
description = "CLI client for LCmux terminal multiplexer — fork of cmux by Manaflow"

[[bin]]
name = "lcmux"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
